--- a/src/blocks/header/styles.scss
+++ b/src/blocks/header/styles.scss
@@ -2,5 +2,114 @@
 @use 'styles/variables' as vars;
 
 .header {
+  display: flex;
   flex: 0 0 auto;
+  align-items: center;
+  justify-content: center;
+
+  padding: 17px 52px 16px 39px;
+
+  width: 100%;
+
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+  }
+
+  &__logo {
+    height: 27px;
+    width: 110px;
+  }
+
+  &__navigation {
+    display: none;
+
+    @include ut.tablet {
+      display: flex;
+    }
+
+    &-list {
+      display: flex;
+    }
+    &-item {
+    }
+    &-link {
+    }
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    gap: 38px;
+    margin: -6px -1px -2px 0px;
+  }
+
+  &__button {
+    display: none;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+
+    width: 23px;
+
+    margin: 3px 1px 0px 0px;
+
+    &-vector {
+      width: 100%;
+      height: 2px;
+
+      background-color: #828282;
+    }
+  }
+
+  &__basket {
+    position: relative;
+
+    margin: -3px 2px 0 0;
+
+    &-icon {
+      width: 25px;
+      height: 21px;
+    }
+
+    &-badge {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      margin: 4px -3px 0 0;
+      z-index: 2;
+    }
+
+    &-star {
+    }
+
+    &-count {
+      position: absolute;
+      top: 50%;
+
+      transform: translateX(-50%);
+      transform: translateY(-50%);
+
+      font-family: vars.$montserrat;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 10px;
+      line-height: 12px;
+      text-align: center;
+      text-transform: uppercase;
+
+      color: #ffffff;
+    }
+  }
 }
