Add header(tablet, desktop). Add footer(not complete). Add main-preview(mobile, not completed)

--- a/src/blocks/footer/template.pug
+++ b/src/blocks/footer/template.pug
@@ -1,1 +1,15 @@
 footer.footer
+  .footer__container
+    .footer__info
+      img(src=`${imgUrl}/logo.svg` alt="").footer__logo
+      span.footer__license.footer__license_tablet 2013–2022 © ООО «НПК «Стамакс» Электропастух СТАТИК-3м
+    .footer__contacts
+      .footer__links
+        a(href="tel: +88005500485").footer__number 8-800-550-04-85
+        .footer__buttons
+          .button1
+          .button2
+      span.footer__license.footer__license_mobile 2013–2022 © ООО «НПК «Стамакс»Электропастух СТАТИК-3м
+      .footer__design
+        span.footer__design-text Дизайн сайта:
+        img(src=`${imgUrl}/design-logo.svg` alt="").footer__design-image
