--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
 
+  width: 100%;
+
   padding: 17px 20px 15px 20px;
 
   background-color: transparent;
