--- a/src/views/main/index.pug
+++ b/src/views/main/index.pug
@@ -1,3 +1,10 @@
 extends /layouts/main/template
 
 block content
+  include /blocks/main/1preview/template
+  include /blocks/main/2info/template
+  include /blocks/main/3generator/template
+  include /blocks/main/4catalog/template
+  include /blocks/main/5reasons/template
+  include /blocks/main/6partners/template
+  include /blocks/main/7reviews/template
