--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,8 @@ $font-weights: (
   '900': 900,
 );
 
-$druk-cyr: 'Druk Text Wide Cyr';
+$druk-cyr: 'Druk Wide Cyr';
 $montserrat: 'Montserrat';
+$druk-wide: 'Druk Text Wide Cyr';
+
 $default-font: $druk-cyr;
