--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,9 +1,8 @@
 // DRUK CYR
 @font-face {
   font-family: 'Druk Text Wide Cyr';
-  src: url('DrukTextWideCyr-Medium.eot');
-  src: local('Druk Text Wide Cyr Medium'), local('DrukTextWideCyr-Medium'),
-    url('fonts/Druk/DrukTextWideCyr-Medium.eot?#iefix')
+  src: url('fonts/Druk/DrukTextWideCyr-Medium.eot');
+  src: url('fonts/Druk/DrukTextWideCyr-Medium.eot?#iefix')
       format('embedded-opentype'),
     url('fonts/Druk/DrukTextWideCyr-Medium.woff2') format('woff2'),
     url('fonts/Druk/DrukTextWideCyr-Medium.woff') format('woff'),
@@ -14,74 +13,45 @@
 }
 
 @font-face {
-  font-family: 'Druk Text Wide Cyr';
-  src: url('DrukTextWideCyr-Heavy.eot');
-  src: local('Druk Text Wide Cyr Heavy'), local('DrukTextWideCyr-Heavy'),
-    url('fonts/Druk/DrukTextWideCyr-Heavy.eot?#iefix')
+  font-family: 'Druk Wide Cyr';
+  src: url('fonts/Druk/DrukWideCyr-Medium.eot');
+  src: url('fonts/Druk/DrukWideCyr-Medium.eot?#iefix')
       format('embedded-opentype'),
-    url('fonts/Druk/DrukTextWideCyr-Heavy.woff2') format('woff2'),
-    url('fonts/Druk/DrukTextWideCyr-Heavy.woff') format('woff'),
-    url('fonts/Druk/DrukTextWideCyr-Heavy.ttf') format('truetype');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Druk Text Wide Cyr';
-  src: url('DrukTextWideCyr-Bold.eot');
-  src: local('Druk Text Wide Cyr Bold'), local('DrukTextWideCyr-Bold'),
-    url('fonts/Druk/DrukTextWideCyr-Bold.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Druk/DrukTextWideCyr-Bold.woff2') format('woff2'),
-    url('fonts/Druk/DrukTextWideCyr-Bold.woff') format('woff'),
-    url('fonts/Druk/DrukTextWideCyr-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Druk Text Wide Cyr';
-  src: url('DrukTextWideCyr-Super.eot');
-  src: local('Druk Text Wide Cyr Super'), local('DrukTextWideCyr-Super'),
-    url('fonts/Druk/DrukTextWideCyr-Super.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Druk/DrukTextWideCyr-Super.woff2') format('woff2'),
-    url('fonts/Druk/DrukTextWideCyr-Super.woff') format('woff'),
-    url('fonts/Druk/DrukTextWideCyr-Super.ttf') format('truetype');
-  font-weight: normal;
+    url('fonts/Druk/DrukWideCyr-Medium.woff2') format('woff2'),
+    url('fonts/Druk/DrukWideCyr-Medium.woff') format('woff'),
+    url('fonts/Druk/DrukWideCyr-Medium.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 // MONTSERRAT
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-ExtraLight.eot');
-  src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'),
-    url('fonts/Montserrat/Montserrat-ExtraLight.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-ExtraLight.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-ExtraLight.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-ExtraLight.ttf') format('truetype');
-  font-weight: 200;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Montserrat';
+//   src: url('Montserrat-ExtraLight.eot');
+//   src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'),
+//     url('fonts/Montserrat/Montserrat-ExtraLight.eot?#iefix')
+//       format('embedded-opentype'),
+//     url('fonts/Montserrat/Montserrat-ExtraLight.woff2') format('woff2'),
+//     url('fonts/Montserrat/Montserrat-ExtraLight.woff') format('woff'),
+//     url('fonts/Montserrat/Montserrat-ExtraLight.ttf') format('truetype');
+//   font-weight: 200;
+//   font-style: normal;
+// }
 
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-Regular.eot');
-  src: local('Montserrat Regular'), local('Montserrat-Regular'),
-    url('fonts/Montserrat/Montserrat-Regular.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-Regular.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-Regular.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: 'Montserrat';
+//   src: url('Montserrat-Regular.eot');
+//   src: local('Montserrat Regular'), local('Montserrat-Regular'),
+//     url('fonts/Montserrat/Montserrat-Regular.eot?#iefix')
+//       format('embedded-opentype'),
+//     url('fonts/Montserrat/Montserrat-Regular.woff2') format('woff2'),
+//     url('fonts/Montserrat/Montserrat-Regular.woff') format('woff'),
+//     url('fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
 @font-face {
   font-family: 'Montserrat';
@@ -98,32 +68,6 @@
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('Montserrat-Light.eot');
-  src: local('Montserrat Light'), local('Montserrat-Light'),
-    url('fonts/Montserrat/Montserrat-Light.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-Light.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-Light.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-Black.eot');
-  src: local('Montserrat Black'), local('Montserrat-Black'),
-    url('fonts/Montserrat/Montserrat-Black.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-Black.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-Black.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-Black.ttf') format('truetype');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
   src: url('Montserrat-Medium.eot');
   src: local('Montserrat Medium'), local('Montserrat-Medium'),
     url('fonts/Montserrat/Montserrat-Medium.eot?#iefix')
@@ -132,44 +76,5 @@
     url('fonts/Montserrat/Montserrat-Medium.woff') format('woff'),
     url('fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
   font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-ExtraBold.eot');
-  src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
-    url('fonts/Montserrat/Montserrat-ExtraBold.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-ExtraBold.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-ExtraBold.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-ExtraBold.ttf') format('truetype');
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-SemiBold.eot');
-  src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'),
-    url('fonts/Montserrat/Montserrat-SemiBold.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-SemiBold.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-SemiBold.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  src: url('Montserrat-Thin.eot');
-  src: local('Montserrat Thin'), local('Montserrat-Thin'),
-    url('fonts/Montserrat/Montserrat-Thin.eot?#iefix')
-      format('embedded-opentype'),
-    url('fonts/Montserrat/Montserrat-Thin.woff2') format('woff2'),
-    url('fonts/Montserrat/Montserrat-Thin.woff') format('woff'),
-    url('fonts/Montserrat/Montserrat-Thin.ttf') format('truetype');
-  font-weight: 100;
   font-style: normal;
 }
