--- a/src/blocks/catalog/template.pug
+++ b/src/blocks/catalog/template.pug
@@ -17,7 +17,7 @@ section.catalog
       +catalogItem({title: 'Электропастухи для лошадей и жеребят', imgSrc: 'catalog-3.png', modifier: 'horse'})
       +catalogItem({title: 'Электропастухи для коз', imgSrc: 'catalog-4.png', modifier: 'goat'})
       +catalogItem({title: 'Электропастухи для свиней и поросят', imgSrc: 'catalog-5.png', modifier: 'pig'})
-      +catalogItem({title: 'Электропастухи для птицы и мелких животных', imgSrc: 'catalog-6.png', modifier: 'bird'})
+      +catalogItem({title: 'Электропастухи для птицы и мелких животных', imgSrc: 'catalog-6.png', modifier: 'rabbit'})
       +catalogItem({title: 'Электропастухи для защиты пасеки от медведя', imgSrc: 'catalog-7.png', modifier: 'bee'})
       +catalogItem({title: 'Электропастухи универсальные', imgSrc: 'catalog-8.png', modifier: 'universal'})
       +catalogItem({title: 'комплектующие для Электропастухов', imgSrc: 'catalog-9.png', modifier: 'accessories'})
