--- a/src/blocks/footer/styles.scss
+++ b/src/blocks/footer/styles.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   // margin-top: auto;
+  width: 100%;
 
   flex: 0 1 auto;
   background: #2c2c2c;
@@ -12,8 +13,10 @@
   &__container {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
-    padding: 20px 0 0 39px;
+    padding: 29px 0px 20px 39px;
+    gap: 19px;
 
     @include ut.tablet {
       padding: 0;
@@ -57,6 +60,7 @@
 
     &_mobile {
       display: flex;
+      width: 91%;
 
       @include ut.tablet {
         display: none;
@@ -66,6 +70,7 @@
   &__contacts {
     display: flex;
     flex-direction: column;
+    gap: 18px;
   }
 
   &__links {
@@ -91,7 +96,8 @@
 
   &__design {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+    gap: 11px;
 
     &-text {
       font-family: 'Montserrat';
