--- a/src/blocks/footer/template.pug
+++ b/src/blocks/footer/template.pug
@@ -6,9 +6,13 @@ footer.footer
     .footer__contacts
       .footer__links
         a(href="tel: +88005500485").footer__number 8-800-550-04-85
-        .footer__buttons
-          .button1
-          .button2
+        .footer__controls
+          button.footer__button
+            a(href="").footer__button-link
+            span.footer__button-text vk
+          button.footer__button
+            a(href="").footer__button-link
+            span.footer__button-text ok
       span.footer__license.footer__license_mobile 2013–2022 © ООО «НПК «Стамакс» Электропастух СТАТИК-3м
       .footer__design
         span.footer__design-text Дизайн сайта:
