--- a/src/blocks/feedback/styles.scss
+++ b/src/blocks/feedback/styles.scss
@@ -12,7 +12,7 @@
   background: #0020d0;
 
   @include ut.tablet {
-    padding: 42px 38px 45px 0;
+    padding: 42px 38px 69px 0;
   }
 
   &__container {
@@ -25,9 +25,15 @@
     max-width: 1440px;
 
     @include ut.tablet {
+      gap: 80px;
       flex-direction: row;
     }
+
+    @include ut.desktop {
+      gap: 79px;
+    }
   }
+
   &__logo {
     width: 200px;
     height: 200px;
@@ -37,10 +43,25 @@
     background-image: url('../../assets/images/feedback-mobile-logo.png');
 
     @include ut.tablet {
-      height: 534px;
-      width: 375px;
+      height: 571px;
+      width: 506px;
+
+      background-size: 375px;
+      background-position-x: 0px;
+      background-position-y: 34px;
 
       background-image: url('../../assets/images/feedback-tablet-background.png');
+    }
+
+    @include ut.desktop {
+      flex: 0 0 auto;
+
+      height: 790px;
+      width: 551px;
+
+      background-size: 520px;
+      background-position-x: 1px;
+      background-position-y: 38px;
     }
   }
 
@@ -48,12 +69,27 @@
     display: flex;
     flex-direction: column;
     gap: 29px;
+
+    @include ut.tablet {
+      gap: 29px;
+      align-self: flex-start;
+      margin-top: 70px;
+    }
+
+    @include ut.desktop {
+      margin-top: 133px;
+      gap: 55px;
+    }
   }
 
   &__info {
     display: flex;
     flex-direction: column;
     gap: 13px;
+
+    @include ut.desktop {
+      gap: 17px;
+    }
   }
 
   &__title {
@@ -67,6 +103,7 @@
     color: #ffffff;
 
     @include ut.tablet {
+      width: 200px;
       font-size: 24px;
       line-height: 31px;
     }
@@ -74,6 +111,7 @@
     @include ut.desktop {
       font-size: 40px;
       line-height: 49px;
+      width: 100%;
     }
   }
 
@@ -87,6 +125,7 @@
     color: #ffffff;
 
     @include ut.tablet {
+      width: 82%;
       font-size: 18px;
       line-height: 23px;
     }
@@ -94,6 +133,7 @@
     @include ut.desktop {
       font-size: 24px;
       line-height: 29px;
+      width: 500px;
     }
   }
 
@@ -101,6 +141,10 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    @include ut.desktop {
+      gap: 19px;
+    }
   }
 
   &__input {
@@ -123,13 +167,25 @@
       font-size: 14px;
       line-height: 18px;
       color: #f5f5f5;
+
+      @include ut.tablet {
+        font-size: 18px;
+        line-height: 23px;
+      }
+
+      @include ut.desktop {
+        font-size: 24px;
+        line-height: 29px;
+      }
     }
 
     @include ut.tablet {
-      padding: 18.88px 0 19px 15px;
+      padding: 17.88px 0 19px 17px;
 
       font-size: 18px;
       line-height: 23px;
+
+      max-width: 376px;
     }
 
     @include ut.desktop {
@@ -137,6 +193,7 @@
 
       font-size: 24px;
       line-height: 29px;
+      max-width: unset;
     }
   }
 
@@ -153,6 +210,17 @@
 
     padding: 10px 0 7px 0;
 
+    @include ut.tablet {
+      max-width: 376px;
+
+      padding: 17px 0 15px 0;
+    }
+
+    @include ut.desktop {
+      max-width: unset;
+      padding: 25px 0 22px 0;
+    }
+
     &-text {
       font-family: 'Druk Wide Cyr';
       font-style: normal;
@@ -163,6 +231,16 @@
       text-transform: uppercase;
 
       color: #ffffff;
+
+      @include ut.tablet {
+        font-size: 18px;
+        line-height: 22px;
+      }
+
+      @include ut.desktop {
+        font-size: 24px;
+        line-height: 29px;
+      }
     }
   }
 }
