Add reviews page

--- a/src/blocks/404/template.pug
+++ b/src/blocks/404/template.pug
@@ -1,7 +1,7 @@
 section.not-found
   .not-found__container
     .not-found__image
-      img(src=`${imgUrl}/not-found.png` alt="").not-found__image-source
+      img(src=`${imgUrl}/404.png` alt="").not-found__image-source
     .not-found__info
       h2.not-found__title что-то пошло не так...
       span.not-found__description Страница, на которую вы пытаетесь перейти, не найдена. Но вы можете вернуться 
