--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ block content
   .main
     a(href=`${viewsUrl}/catalog/index.html`) catalog
   .main
-    a(href=`${viewsUrl}/feedback/index.html`) Feedback
+    a(href=`${viewsUrl}/reviews/index.html`) Reviews
   .main
     a(href=`${viewsUrl}/shipping/index.html`) Shipping
   .main
