--- a/src/blocks/404/styles.scss
+++ b/src/blocks/404/styles.scss
@@ -7,29 +7,120 @@
 
   width: 100%;
 
+  padding: 89px 39px 91px 39px;
+
+  @include ut.tablet {
+    padding: 47px 0 91px 0;
+  }
+
+  @include ut.desktop {
+    padding: 98px 0 0 0;
+  }
+
   &__container {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     width: 100%;
+
+    gap: 27px;
+
+    @include ut.tablet {
+      align-items: center;
+      flex-direction: row;
+
+      max-width: 768px;
+    }
+
+    @include ut.desktop {
+      max-width: 1183px;
+    }
   }
 
   &__image {
+    width: 350px;
+    height: 367px;
+
+    @include ut.tablet {
+      flex: 0 0 auto;
+      order: 2;
+
+      width: 374px;
+      height: 393px;
+    }
+
+    @include ut.desktop {
+      width: 682px;
+      height: 715px;
+    }
+
     &-source {
+      width: 100%;
+      height: 100%;
     }
   }
 
   &__info {
     display: flex;
     flex-direction: column;
+
+    gap: 11px;
+
+    @include ut.tablet {
+      order: 1;
+
+      gap: 20px;
+      margin-top: -35px;
+    }
+
+    @include ut.desktop {
+      margin-top: -80px;
+      gap: 17px;
+    }
   }
 
   &__title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 23px;
+
+    text-transform: uppercase;
+
+    color: #0020d0;
+
+    @include ut.tablet {
+      font-size: 24px;
+      line-height: 31px;
+    }
+
+    @include ut.desktop {
+      font-size: 40px;
+      line-height: 58px;
+    }
   }
 
   &__description {
+    font-family: vars.$montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+
+    @include ut.tablet {
+      font-size: 14px;
+      line-height: 18px;
+    }
+
+    @include ut.desktop {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 
   &__link {
+    color: #0020d0;
+    text-decoration: underline;
   }
 }
