--- a/src/views/about/index.pug
+++ b/src/views/about/index.pug
@@ -1,3 +1,8 @@
 extends /layouts/main/template
 
 block content
+  include /blocks/about/a1/template
+  include /blocks/about/a2/template
+  include /blocks/about/a3/template
+  include /blocks/about/a4/template
+  include /blocks/about/a5/template
