About block 2 complete

--- a/src/blocks/about/a2/styles.scss
+++ b/src/blocks/about/a2/styles.scss
@@ -8,27 +8,50 @@
   width: 100%;
 
   background: #0020d0;
-  padding: 70px 29px 175px 24px;
+  padding: 70px 29px 162px 24px;
 
   @include ut.tablet {
-    padding: 52px 29px 175px 24px;
+    padding: 52px 29px 36px 24px;
+  }
+
+  @include ut.desktop {
+    padding: 74px 29px 99px 24px;
+  }
+
+  &__background {
+    display: none;
+
+    @include ut.tablet {
+      display: block;
+      position: absolute;
+      right: 0;
+      width: 553.06px;
+      height: 778.04px;
+      margin: -51px -103px 0 0px;
+    }
+
+    @include ut.desktop {
+      width: 712px;
+      height: 998.04px;
+      margin: -61px -1px 0px 0px;
+    }
   }
 
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 42px;
+    gap: 47px;
 
     width: 100%;
     max-width: 788px;
 
     @include ut.tablet {
-      gap: 44px;
+      gap: 49px;
     }
 
     @include ut.desktop {
-      gap: 55px;
-      max-width: 1179px;
+      gap: 45px;
+      max-width: 1229px;
     }
   }
 
@@ -52,19 +75,38 @@
     @include ut.desktop {
       font-size: 40px;
       line-height: 58px;
+
+      margin-left: 26px;
     }
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    gap: 39px;
+    gap: 40px;
+
+    @include ut.tablet {
+      gap: 20px;
+    }
+
+    @include ut.desktop {
+      gap: 49px;
+    }
 
     &-header {
       display: flex;
       flex-direction: column;
+      align-self: flex-start;
 
-      gap: 33px;
+      gap: 36px;
+
+      @include ut.tablet {
+        gap: 30px;
+      }
+
+      @include ut.desktop {
+        gap: 40px;
+      }
     }
 
     &-footer {
@@ -76,6 +118,27 @@
 
       border-radius: 30px;
       border: 2px solid #ffffff;
+
+      max-width: 404px;
+
+      @include ut.tablet {
+        gap: 22px;
+        padding: 26px 17px 33px 12px;
+
+        .guide__content-title {
+          max-width: 390px;
+        }
+      }
+
+      @include ut.desktop {
+        gap: 14px;
+        padding: 40px 17px 43px 27px;
+        max-width: 627px;
+
+        .guide__content-title {
+          max-width: 481px;
+        }
+      }
     }
 
     &-title {
@@ -98,6 +161,8 @@
       @include ut.desktop {
         font-size: 22px;
         line-height: 27px;
+
+        max-width: 500px;
       }
     }
 
@@ -120,6 +185,11 @@
       @include ut.desktop {
         line-height: 24px;
       }
+
+      @include ut.desktop {
+        font-size: 18px;
+        line-height: 24px;
+      }
     }
   }
 
@@ -127,48 +197,112 @@
     display: flex;
 
     padding-left: 18px;
-    margin: -1px 0 0 0;
+    margin: -5px 0 0 0;
+
+    @include ut.tablet {
+      margin: -16px 0 0 0;
+    }
 
     &-icon {
       max-width: 100px;
 
       &_visa {
         margin: 0 0 0 5px;
+
+        @include ut.tablet {
+          width: 55.41px;
+
+          margin: 0 0 0 13px;
+        }
       }
 
       &_mir {
         margin: 0 0 0 22px;
+
+        @include ut.tablet {
+          width: 76px;
+
+          margin: 0 0 0 24px;
+        }
       }
 
       &_sber {
         margin: 0 0 0 17px;
+
+        @include ut.tablet {
+          width: 84px;
+
+          margin: 0 0 0 18px;
+        }
       }
     }
   }
 
   &__case {
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    gap: 4px;
     margin-left: 25px;
+    flex: 0 0 auto;
 
     &:last-child {
+      gap: 12px;
+
+      @include ut.desktop {
+        gap: 3px;
+      }
+
       .guide__case-description {
         gap: 5px;
       }
 
       .guide__content-text {
         width: 290px;
+
+        @include ut.tablet {
+          width: 361px;
+        }
+
+        @include ut.desktop {
+          width: 616px;
+        }
       }
     }
 
     @include ut.tablet {
+      justify-content: flex-start;
       margin-left: 0;
+      gap: 17px;
+    }
+
+    @include ut.desktop {
       gap: 8px;
+    }
+
+    &-header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      @include ut.tablet {
+        gap: 8px;
+      }
+
+      @include ut.desktop {
+        gap: 10px;
+      }
     }
 
     &-icon {
       width: 30px;
       height: 30px;
+
+      margin-top: -5px;
+
+      @include ut.desktop {
+        width: 55px;
+        height: 55px;
+      }
     }
 
     &-description {
@@ -185,8 +319,16 @@
 
       gap: 10px;
 
+      padding-left: 50px;
+
       @include ut.tablet {
-        margin-left: -24px;
+        max-width: 422px;
+        margin-left: -36px;
+      }
+
+      @include ut.desktop {
+        margin-left: -23px;
+        max-width: 622px;
       }
     }
   }
