--- a/src/blocks/about/a2/template.pug
+++ b/src/blocks/about/a2/template.pug
@@ -25,7 +25,7 @@ section.guide
           span.guide__content-text Груз прибывает в место назначения.
           span.guide__content-text Вы проверяете груз, убеждаетесь, что все в порядке, и только потом производите оплату.
     .guide__payments
-      img(src=`${icnUrl}/about-mastercard.svg` alt="").guide__payments-icon
+      img(src=`${icnUrl}/about-mastercard.svg` alt="").guide__payments-icon.guide__payments-icon_master
       img(src=`${icnUrl}/about-visa.svg` alt="").guide__payments-icon.guide__payments-icon_visa
       img(src=`${icnUrl}/about-mir.svg`, alt="").guide__payments-icon.guide__payments-icon_mir
       img(src=`${icnUrl}/about-sber.svg`, alt="").guide__payments-icon.guide__payments-icon_sber
